# ml-workshop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
data/: electricity.db
scripts/: download_uci_data.py  generate_sample_data.py  run_training.py
src/: __init__.py  config.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: __init__.py  metrics.py  models.py  predict.py  retrain.py
src/api/static/: app.js  index.html  styles.css
src/data_pipeline/: __init__.py  feature_engineering.py  ingestion.py  transformers.py  validation.py
src/database/: __init__.py  connection.py  models.py
src/ml_pipeline/: __init__.py  evaluation.py  hyperparameter.py  models.py  registry.py  training.py
src/monitoring/: __init__.py  drift.py  logging.py
src/orchestration/: __init__.py  scheduler.py  tasks.py
tests/: test_api.py  test_data_pipeline.py  test_ml_pipeline.py
